--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 *.dll
 *.so
 *.dylib
+db-proj
 
 # Test binary, built with `go test -c`
 *.test
@@ -14,4 +15,4 @@
 # Dependency directories (remove the comment below to include it)
 # vendor/
 #
-./report
+report/
