--- a/compose.yml
+++ b/compose.yml
@@ -33,6 +33,7 @@ services:
       PGADMIN_DEFAULT_PASSWORD: postgres
       PGADMIN_LISTEN_PORT: 5050
       PGADMIN_CONFIG_SERVER_MODE: 'False'
+      PGADMIN_CONFIG_MASTER_PASSWORD_REQUIRED: 'False' 
     ports:
       - 5050:5050
     depends_on:
