Implement state management for user authentication

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
             "request": "launch",
             "mode": "debug",
             "program": "${file}",
-            "console": "integratedTerminal",
+            "console": "externalTerminal"
         }
     ]
 }
